--- a/package.json
+++ b/package.json
@@ -96,13 +96,16 @@
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "@types/showdown": "^2.0.6"
   },
   "dependencies": {
     "cheerio": "^1.0.0",
     "highlight.js": "^11.10.0",
     "jquery": "^3.7.1",
     "jquery-ui": "^1.14.0",
-    "marked": "^14.1.2"
+    "marked": "^14.1.2",
+    "openai": "^4.67.1",
+    "showdown": "^2.1.0"
   }
 }
