--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ai-helper",
   "displayName": "ai-helper",
-  "publisher": "GJFeng",
+  "publisher": "gjfeng",
   "description": "",
   "version": "0.0.1",
   "engines": {
