feat: name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-codehelper",
+  "name": "AI Code Helper",
   "displayName": "ai-codehelper",
   "publisher": "gjfeng",
   "description": "",
