feat: name change

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "AI Code Helper",
-  "displayName": "ai-codehelper",
+  "name": "ai-codehelper",
+  "displayName": "AI Code Helper",
   "publisher": "gjfeng",
   "description": "",
   "version": "0.0.1",
