--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-codehelper",
-  "displayName": "AI Code Helper",
+  "displayName": " Code Helper(ChatGPT)",
   "publisher": "gjfeng",
   "description": "",
   "version": "0.0.1",
